--- a/src/app/pages/settings/page/page.component.html
+++ b/src/app/pages/settings/page/page.component.html
@@ -1,8 +1,8 @@
-<bit-ph>
-  <button *bitPhAction nz-button nzType="primary" nzShape="circle">
+<wpx-layout>
+  <button *wpxLayoutAction nz-button nzType="primary" nzShape="circle">
     <i nz-icon nzType="plus"></i>
   </button>
-</bit-ph>
+</wpx-layout>
 
 <nz-row [nzGutter]="12">
   <nz-col nzFlex="360px">
