--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -9,9 +9,8 @@
     </nz-sider>
     <nz-layout>
       <ng-scrollbar>
-        <!--        <bit-page-header></bit-page-header>-->
         <nz-content>
-          <router-outlet (activate)="wpxLayout.activated()"></router-outlet>
+          <router-outlet (activate)="activated()"></router-outlet>
         </nz-content>
       </ng-scrollbar>
     </nz-layout>
