--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -10,7 +10,7 @@
     <nz-layout>
       <ng-scrollbar>
         <nz-content>
-          <router-outlet (activate)="activated()"></router-outlet>
+          <router-outlet></router-outlet>
         </nz-content>
       </ng-scrollbar>
     </nz-layout>
