--- a/src/app/settings/page/page.component.html
+++ b/src/app/settings/page/page.component.html
@@ -1,4 +1,4 @@
-<wpx-layout>
+<wpx-layout skip>
   <button *wpxLayoutAction nz-button nzType="primary" nzShape="circle">
     <i nz-icon nzType="plus"></i>
   </button>
