--- a/projects/ngx/layout/wpx-page-header/wpx-page-header.component.html
+++ b/projects/ngx/layout/wpx-page-header/wpx-page-header.component.html
@@ -1,46 +1,50 @@
-<!--<ng-container *ngIf="(wpxLayout.skip | async) === false">-->
-<!--  <ng-container *ngTemplateOutlet="wpxLayout.alert | async"></ng-container>-->
-<!--  <nz-page-header [nzGhost]="false" [nzBackIcon]="(wpxLayout.back | async) ? '' : null">-->
-<!--    <nz-breadcrumb nz-page-header-breadcrumb>-->
-<!--      <ng-container *ngFor="let _ of wpxLayout.fragments; index as i">-->
-<!--        <nz-breadcrumb-item>-->
-<!--          <ng-container *ngIf="dict[wpxLayout.fragments | slice: 0:i + 1 | wpxJoin: '/'] as x">-->
-<!--            <ng-container *ngIf="x.router; else text">-->
-<!--              <a [routerLink]="x.fragments">{{ x.name }}</a>-->
-<!--            </ng-container>-->
-<!--            <ng-template #text>{{ x.name }}</ng-template>-->
-<!--          </ng-container>-->
-<!--        </nz-breadcrumb-item>-->
-<!--      </ng-container>-->
-<!--    </nz-breadcrumb>-->
-<!--    <nz-page-header-title>-->
-<!--      <ng-container *ngIf="!!(wpxLayout.title | async); else defaultTitle">-->
-<!--        {{ wpxLayout.title | async }}-->
-<!--      </ng-container>-->
-<!--      <ng-template #defaultTitle>-->
-<!--        {{ dict[wpxLayout.fragments | wpxJoin: '/']?.name }}-->
-<!--      </ng-template>-->
-<!--    </nz-page-header-title>-->
-<!--    <nz-page-header-subtitle *ngIf="wpxLayout.subTitle | async">-->
-<!--      {{ wpxLayout.subTitle | async }}-->
-<!--    </nz-page-header-subtitle>-->
-<!--    <nz-page-header-tags *ngIf="wpxLayout.tags | async">-->
-<!--      <ng-container *ngTemplateOutlet="wpxLayout.tags | async"></ng-container>-->
-<!--    </nz-page-header-tags>-->
-<!--    <nz-page-header-extra *ngIf="wpxLayout.actions | async">-->
-<!--      <nz-space>-->
-<!--        <ng-container *ngFor="let ref of wpxLayout.actions | async">-->
-<!--          <ng-container *nzSpaceItem>-->
-<!--            <ng-container *ngTemplateOutlet="ref"></ng-container>-->
-<!--          </ng-container>-->
-<!--        </ng-container>-->
-<!--      </nz-space>-->
-<!--    </nz-page-header-extra>-->
-<!--    &lt;!&ndash;    <nz-page-header-content *ngIf="router.content | async">&ndash;&gt;-->
-<!--    &lt;!&ndash;      <ng-container *ngTemplateOutlet="router.content | async"></ng-container>&ndash;&gt;-->
-<!--    &lt;!&ndash;    </nz-page-header-content>&ndash;&gt;-->
-<!--    <nz-page-header-footer *ngIf="wpxLayout.footer | async">-->
-<!--      <ng-container *ngTemplateOutlet="wpxLayout.footer | async"></ng-container>-->
-<!--    </nz-page-header-footer>-->
-<!--  </nz-page-header>-->
-<!--</ng-container>-->
+<ng-container *ngIf="wpxLayout.skip === false">
+  <ng-container *ngIf="!!wpxLayout.alert">
+    <ng-container *ngTemplateOutlet="wpxLayout.alert"></ng-container>
+  </ng-container>
+  <nz-page-header [nzGhost]="false" [nzBackIcon]="wpxLayout.back ? '' : null">
+    <nz-breadcrumb *ngIf="dict" nz-page-header-breadcrumb>
+      <ng-container *ngFor="let _ of wpxLayout.activated; index as i">
+        <nz-breadcrumb-item>
+          <ng-container *ngIf="dict[wpxLayout.activated | slice: 0:i + 1 | wpxJoin: '/'] as node">
+            <ng-container *ngIf="!(node.router | wpxEmpty); else text">
+              <a [routerLink]="node | wpxAutoRouter">{{ node.name }}</a>
+            </ng-container>
+            <ng-template #text>{{ node.name }}</ng-template>
+          </ng-container>
+        </nz-breadcrumb-item>
+      </ng-container>
+    </nz-breadcrumb>
+    <nz-page-header-title>
+      <ng-container *ngIf="!!wpxLayout.title; else defaultTitle">
+        {{ wpxLayout.title }}
+      </ng-container>
+      <ng-template #defaultTitle>
+        <ng-container *ngIf="dict">
+          {{ dict[wpxLayout.activated | wpxJoin: '/']?.name }}
+        </ng-container>
+      </ng-template>
+    </nz-page-header-title>
+    <nz-page-header-subtitle *ngIf="!!wpxLayout.subTitle">
+      {{ wpxLayout.subTitle }}
+    </nz-page-header-subtitle>
+    <nz-page-header-tags *ngIf="!!wpxLayout.tags">
+      <ng-container *ngTemplateOutlet="wpxLayout.tags"></ng-container>
+    </nz-page-header-tags>
+    <nz-page-header-extra *ngIf="!!wpxLayout.actions">
+      <nz-space>
+        <ng-container *ngFor="let ref of wpxLayout.actions">
+          <ng-container *nzSpaceItem>
+            <ng-container *ngTemplateOutlet="ref"></ng-container>
+          </ng-container>
+        </ng-container>
+      </nz-space>
+    </nz-page-header-extra>
+    <!--    <nz-page-header-content *ngIf="router.content | async">-->
+    <!--      <ng-container *ngTemplateOutlet="router.content | async"></ng-container>-->
+    <!--    </nz-page-header-content>-->
+    <nz-page-header-footer *ngIf="!!wpxLayout.footer">
+      <ng-container *ngTemplateOutlet="wpxLayout.footer"></ng-container>
+    </nz-page-header-footer>
+  </nz-page-header>
+</ng-container>
