--- a/projects/ngx/lowcode/wpx-page/wpx-page.component.html
+++ b/projects/ngx/lowcode/wpx-page/wpx-page.component.html
@@ -1,4 +1,4 @@
-<wpx-layout skip>
+<wpx-layout>
   <button *wpxLayoutAction nz-button nzType="primary" nzShape="circle">
     <i nz-icon nzType="plus"></i>
   </button>
