--- a/projects/ngx/lowcode/wpx-schema/wpx-schema.component.html
+++ b/projects/ngx/lowcode/wpx-schema/wpx-schema.component.html
@@ -3,3 +3,34 @@
     <i nz-icon nzType="plus"></i>
   </button>
 </wpx-layout>
+
+<nz-row [nzGutter]="12">
+  <nz-col nzFlex="360px">
+    <nz-card>
+      <nz-space style="margin-bottom: 12px">
+        <nz-input-group *nzSpaceItem nzSuffixIcon="search">
+          <input type="text" nz-input placeholder="搜索资源名称" [(ngModel)]="name" />
+        </nz-input-group>
+        <nz-button-group *nzSpaceItem>
+          <button nz-button nz-tooltip="全部收起" (click)="setExpanded(tree.getTreeNodes(), false)">
+            <i nz-icon nzType="node-collapse"></i>
+          </button>
+          <button nz-button nz-tooltip="全部展开" (click)="setExpanded(tree.getTreeNodes(), true)">
+            <i nz-icon nzType="node-expand"></i>
+          </button>
+        </nz-button-group>
+      </nz-space>
+      <nz-tree
+        #tree
+        nzBlockNode
+        nzShowLine
+        nzShowIcon
+        nzDraggable
+        [nzData]="nodes"
+        [nzSearchValue]="name"
+        (nzClick)="fetch($event)"
+      ></nz-tree>
+    </nz-card>
+  </nz-col>
+  <nz-col nzFlex="auto"> </nz-col>
+</nz-row>
