--- a/projects/ngx/layout/wpx-nav/wpx-nav.component.html
+++ b/projects/ngx/layout/wpx-nav/wpx-nav.component.html
@@ -5,7 +5,7 @@
   <ng-template #navTemplate let-nodes>
     <ng-container *ngFor="let node of nodes | wpxSort: 'sort'">
       <ng-container *ngIf="node.nav">
-        <ng-container *ngIf="!(node.router | wpxEmpty); else not">
+        <ng-container *ngIf="!!node.router.template; else not">
           <li nz-menu-item nzMatchRouter [nzPaddingLeft]="node.level * 16" [routerLink]="node | wpxAutoRouter">
             <i *ngIf="!!node.icon" nz-icon [nzType]="node.icon"></i>
             <span>{{ node.name }}</span>
