--- a/projects/ngx/lowcode/wpx-schema/wpx-schema.component.html
+++ b/projects/ngx/lowcode/wpx-schema/wpx-schema.component.html
@@ -117,13 +117,15 @@
             </p>
             <p nz-paragraph>
               <i nz-icon nzType="bulb" nzTheme="twotone"></i>
-              在树视图中使用 🖱 选中节点获取详情，也可以 <code>右键</code> 获取更多操作，
-              <code><i nz-icon nzType="lock"></i></code>
-              代表属于系统组件
+              在树视图中使用 🖱 选中节点获取详情，也可以 <code>右键</code> 获取更多操作
             </p>
             <p nz-paragraph>
               <i nz-icon nzType="bulb" nzTheme="twotone"></i>
-              执行操作 <code><i nz-icon nzType="sync"></i></code> 当前开发模式配置将发布至生成环境
+              包含 <code><i nz-icon nzType="lock"></i></code> 属于系统组件不可修改删除
+            </p>
+            <p nz-paragraph>
+              <i nz-icon nzType="bulb" nzTheme="twotone"></i>
+              执行操作 <code><i nz-icon nzType="cloud-upload"></i></code> 当前开发模式配置将发布至生成环境
             </p>
           </div>
         </nz-result>
